# secondYear-

./: CMakeLists.txt  README.md
NikDg/: NikDg.pro  all.h  codes1d.cpp  codes1d.h  jacobip.cpp  main.cpp  startup1d.cpp  startup1d.h
source1d/: .source1d.cpp.swp  CMakeLists.txt  CMakeLists.txt~  all.h  main.cpp  source1d.cpp  source1d.h  startUp1d.cpp  startUp1d.h
